fixed margin and alignment error in about text

--- a/basic-bio/html-bio-with-css.css
+++ b/basic-bio/html-bio-with-css.css
@@ -7,8 +7,8 @@ body {
 }
 header {
     background-color: #333333;
-    padding: 0%;
-    margin: 0%;
+    padding: 0;
+    margin: 0;
 }
 
 h1 {
@@ -41,5 +41,5 @@ h2 {
 #bio-image {
     float: left;
     width: 200px;
-    margin: 20px;
+    margin-right: 20px;
 }
